# brefito

./: .gitignore  CLAUDE.md  LICENSE  README.md  __setup.py  data.csv  environment.yml  pyproject.toml  setup.py
examples/LTEE-clone/: commands.sh  data.csv
scripts/: brefito
src/brefito/: autocycler_cluster_trim_resolve_combine.sh  brefito.py  extract_mobile_elements.py  fastq_folder_to_data_csv.py  normalize_assembly.py  summarize_soft_clipping.R
src/brefito/workflow/envs/: autocycler.yml  bioperl.yml  biopython.linux-64.pin.txt  biopython.osx-64.pin.txt  biopython.yml  blast.yml  bowtie2.linux-64.pin.txt  bowtie2.osx-64.pin.txt  bowtie2.yml  breseq-LTEE.yml  breseq-ext-cnv.yml  breseq-phylip.yml  breseq-prerelease.yml  breseq.linux-64.pin.txt  breseq.osx-64.pin.txt  breseq.yml  breseq_LTEE.yml  canu.linux-64.pin.txt  canu.osx-64.pin.txt  canu.yml  download.linux-64.pin.txt  download.osx-64.pin.txt  download.yml  fastp.linux-64.pin.txt  fastp.osx-64.pin.txt  fastp.yml  filtlong.yml  (+68 more)
workflow/: snakefile-assemble  snakefile-polish-medaka  snakefile-prepare
workflow/envs/: breseq.yml  masurca.yml  miniasm_minipolish.yml  mummer_syri_plotsr.yml  necat.yml  nextdenovo_nextpolish.yml  polypolish.yml  raven.yml  seqkit.yml  trycycler.yml
workflow/rules/: assemble.smk  cluster-assemblies.smk  compare-mummer-syri.smk  compare-syri.smk  consensus-assemblies.smk  download-reads-lftp.smk  filter-long-reads.smk  filter-nanopore-reads.smk  polish-medaka.smk  polish-polca.smk  polish-polypolish.smk  reconcile-assemblies.smk  subsample-long-reads.smk  subsample-short-reads.smk  trim-illumina-reads.smk  trim-long-reads.smk  trim-nanopore-reads.smk  trim-short-reads.smk  trycycler-assemble.smk
workflow/rules/unused/: download-reads-wget.smk  polish-pilon.smk
(+69 files in other folders)
