[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brefito"
version = "0.0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.smk", "*.yml", "*.pl", "*.R"]

[project.scripts]
brefito = "brefito.brefito:main"
normalize_assembly = "brefito.workflow.scripts.normalize_assembly:main"
canu_trim = "brefito.workflow.scripts.canu_trim:main"
extract_mobile_elements = "brefito.workflow.scripts.extract_mobile_elements:main"
fastq_folder_to_data_csv = "brefito.workflow.scripts.fastq_folder_to_data_csv:main"



